<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                    xmlns:tools="http://schemas.android.com/tools"
                                    android:padding="30dp"
                                    android:background="#aaaaaa" android:layout_width="match_parent"
                                    app:contentPaddingBottom="1sp"
                                    android:layout_height="wrap_content" android:drawingCacheQuality="auto"
                                    app:cardBackgroundColor="#aaaaaa">

    <LinearLayout android:orientation="vertical" android:layout_width="match_parent"
                  android:layout_height="wrap_content" android:fadingEdge="horizontal|vertical"
                  android:background="#ffffff" android:paddingLeft="20sp" android:paddingRight="20sp">

        <LinearLayout android:padding="10sp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:text="@string/application_name" android:layout_width="wrap_content"
                      android:layout_height="wrap_content" android:textStyle="bold"/>
            <TextView android:id="@+id/cv_appname"
                      android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:hint="" tools:ignore="LabelFor" android:autofillHints=""/>
        </LinearLayout>

        <LinearLayout android:padding="10sp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:text="@string/username" android:layout_width="wrap_content"
                      android:layout_height="wrap_content" android:textStyle="bold"/>
            <TextView android:id="@+id/cv_username" android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:hint="" tools:ignore="LabelFor" android:autofillHints=""/>

        </LinearLayout>

        <TextView android:id="@+id/cv_extra" android:visibility="gone" android:layout_width="wrap_content"
                  android:layout_height="wrap_content"/>
        <TextView android:id="@+id/cv_id" android:visibility="gone" android:layout_width="wrap_content"
                  android:layout_height="wrap_content"/>
        <TextView android:visibility="gone" android:id="@+id/cv_password" android:layout_width="wrap_content"
                  android:layout_height="wrap_content"/>
        <Button android:id="@+id/btnView" android:layout_width="match_parent" android:text="@string/view"
                android:layout_height="wrap_content"

        />


    </LinearLayout>

</androidx.cardview.widget.CardView>